# rom-container

./: .clangd  .editorconfig  .gitconfig  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.OLC  README.rom  README.version  compile_commands.json  docker-compose.yaml  run.sh
.devcontainer/: devcontainer.json  docker-compose.yml
area/: air.are  arachnos.are  area.lst  astral.are  canyon.are  catacomb.are  chapel.are  daycare.are  draconia.are  dream.are  drow.are  dwarven.are  dylan.are  eastern.are  galaxy.are  gnome.are  grave.are  group.are  grove.are  haon.are  help.are  hitower.are  hood.are  immort.are  limbo.are  mahntor.are  marsh.are  mega1.are  midennir.are  midgaard.are  mirror.are  mobfact.are  moria.are  nirvana.are  ofcol.are  ofcol2.are  olc.hlp  olympus.are  plains.are  pyramid.are  (+13 more)
doc/: act.txt  area.txt  class.txt  command.txt  memory.txt  new.txt  pfile.txt  port.txt  security.txt  sites.txt  skill.txt  sky.txt  trad.txt  vnum.txt
gods/: Mort  Thanos
player/: Mort  Mort.player  Thanos
scripts/: first.lua
src/: .clang-format  CMakeLists.txt  Makefile  Makefile.linux  act_comm.c  act_enter.c  act_info.c  act_move.c  act_obj.c  act_wiz.c  act_wiz.h  alias.c  ascii_bits.h  ban.c  ban.h  bit.c  bit.h  comm.c  const.c  db.c  db.h  db2.c  effects.c  fight.c  flags.c  handler.c  healer.c  interp.c  interp.h  lookup.c  lookup.h  magic.c  magic.h  magic2.c  make.out  mem.c  merc.h  music.c  music.h  note.c  (+21 more)
